Fixed Navbar, Finished Setup (w constraints), Started Dark Mode Feature (setting.tsx), Added Footer Component

--- a/Assignment2/frontend/src/styles.css
+++ b/Assignment2/frontend/src/styles.css
@@ -88,10 +88,6 @@ body {
     display: flex;
 }
 
-.navbar-brand {
-    color: #F3E9D2;
-}
-
 /* cards */
 .card-body {
     background-color: #F3E9D2;
